fixing alignment, removing ugly borders

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@
   --minimal-box-shadow: 1px 2px 2px hsl(0deg 0% 0% / 0.45);
   --default-box-shadow: 3.3px 6.6px 6.6px hsl(0deg 0% 0% / 0.42);
   --modal-box-shadow: 5px 10px 10px hsl(0deg 0% 0% / 0.32);
-  --outline-border: 1px inset var(--bluish-grey);
+  --placeholder-border: 1px inset var(--bluish-grey);
   --stencil-gradient: linear-gradient(
     to right,
     hsla(0, 0%, 0%, 0.1),
@@ -193,7 +193,6 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 8px;
 }
 
 .card-label {
@@ -211,7 +210,6 @@ html {
   box-shadow: var(--default-box-shadow);
   margin: 4px 8px 8px 8px;
   padding: 16px;
-  border: var(--outline-border);
   border-radius: var(--default-border-radius);
   height: 320px;
 }
@@ -229,7 +227,6 @@ html {
   color: var(--bluish-grey);
   height: 40px;
   width: 100%;
-  border: var(--outline-border);
   border-radius: var(--default-border-radius);
   padding: 0px 0px 0px 8px;
 }
@@ -244,7 +241,7 @@ html {
   color: var(--bluish-grey);
   height: 38px;
   width: 96%; /* for some reason this overflows otherwise */
-  border: var(--outline-border);
+  border: 0px;
   border-radius: var(--default-border-radius);
   padding: 0px 0px 0px 8px;
   margin: 0px;
@@ -264,7 +261,6 @@ html {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  border: var(--outline-border);
   border-radius: var(--default-border-radius);
   z-index: 300;
   box-shadow: var(--default-box-shadow);
@@ -375,7 +371,7 @@ html {
   height: 140px;
   width: 140px;
   background-image: var(--stencil-gradient);
-  border: var(--outline-border);
+  border: var(--placeholder-border);
   border-radius: var(--default-border-radius);
   background-size: 400% 100%;
   margin: 0 auto;
@@ -397,7 +393,7 @@ html {
 .placeholder-title {
   height: 23px;
   width: 140px;
-  border: var(--outline-border);
+  border: var(--placeholder-border);
   border-radius: var(--default-border-radius);
   background-image: var(--stencil-gradient);
   background-size: 400% 100%;
@@ -408,7 +404,7 @@ html {
 .placeholder-artist {
   height: 15px;
   width: 100px;
-  border: var(--outline-border);
+  border: var(--placeholder-border);
   border-radius: var(--default-border-radius);
   background-image: var(--stencil-gradient);
   background-size: 400% 100%;
